# grpc-templ-cpp-js-docker

./: README.md  build-protos.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
client-web/: .gitignore  client.js  echoapp.js  package.json
docker/envoy-proxy/: Dockerfile  envoy.yaml
docker/srv-cpp/: Dockerfile
docker/srv-html/: Dockerfile
srv-cpp/: CMakeLists.txt
srv-cpp/src/: CMakeLists.txt  echo_server.cc  echo_service_impl.cc  echo_service_impl.h
